# ASOL-synthetic-data-generation

./: .gitignore  README.md  exp.ipynb  pyproject.toml
asol_synthetic_data_generation/common/: paths.py
notebooks/: warp_poles.ipynb
scripts/: dataset.py  generate_hole_dataset.py  keypoints_extractor.py  train-yolo-seg.py  train_yolo_seg.py  train_yolo_seg_from_keypoints.py  trim_images_to_fences.py
src/common/: config.py  datasets.py  predict.py  train.py  transforms.py  utils.py
src/helpers/: visualize_dataset.py
src/inpainting/: inpaint.py
src/models/: unet.py
src/scripts/: download_dataset.py  generate_hole_dataset.py  generate_pole_defects.py  keypoints_extractor.py  rename_image_folder.py  train_yolo_seg.py  trim_images_to_fences.py
weights/segmentation/poles/yolov8s-seg/: README.md
weights/segmentation/razor-wire/yolov8s-seg/: README.md
weights/yolov8s-seg/: README.md
