[project]
name = "asol-synthetic-data-generation"
version = "0.1.0"
description = ""
authors = [
    {name = "JacobCrown"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
packages = [
    { include = "*", from = "src" }
]

[tool.poetry]
package-mode = true

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

diffusers = { version = "^0.33.1", extras = ["torch"] }
transformers = "^4.38.0"
accelerate = "^1.6.0"

# Strict versions for critical packages (GPU-based)
torch = {source = "pytorch-gpu"}
torchvision = {source = "pytorch-gpu"}
numpy = ">=1.21.0,<2.0.0"

# Strict versioning where needed
opencv-python = "==4.8.0.76"

# Allow the latest versions that are compatible with each other
ultralytics = "*"
roboflow = "*"
supervision = "*"
black = "*"
scikit-learn = "*"
albumentations = "*"

[tool.poetry.group.dev.dependencies]
ipykernel = "*"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
